# homogenous_markov_baseball

./: README.md
hmc_baseball/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
hmc_baseball/.github/workflows/: ci.yml
hmc_baseball/data/: 1984_2025_baseball_stats.csv  2024_baseball_stats.csv
hmc_baseball/notebooks/: Report.ipynb  paper_figures.ipynb  test_new_aux.ipynb
hmc_baseball/src/hmc_baseball/: __init__.py  cli.py  engine.py  new_aux_method.py  pipeline.py  sokol_marginal.py
hmc_baseball/tests/: test_engine.py  test_pipeline.py
